--- a/contact.html
+++ b/contact.html
@@ -38,7 +38,7 @@
                 <!-- Navbar Menu -->
                 <div class="collapse navbar-collapse justify-content-end" id="mainMenu">
                     <ul class="navbar-nav text-uppercase f1">
-                        <li class="nav-item"><a class="nav-link" href="#home">home</a></li>
+                        <li class="nav-item"><a class="nav-link" href="index.html">home</a></li>
                         <li class="nav-item"><a class="nav-link" href="aboutme.html">about me</a></li>
                         <li class="nav-item"><a class="nav-link" href="blog.html">blog</a></li>
                         <li class="nav-item"><a class="nav-link" href="projects.html">projects</a></li>
@@ -52,7 +52,7 @@
     <div class="container mt-5 pt-5">
         <div class="row align-items-center">
             <div class="col-lg-6 order-lg-1 order-2">
-                <h1 class="fw-bold mb-4 custom-h1">CONTACT US</h1>
+                <h1 class="fw-bold mb-4 custom-h1">Let's Connect</h1>
                 <p class="mb-5 custom-intro-text">
                     Let’s connect! I’m here to help and would love to hear from you. Whether you have a question, a
                     comment, or just want to chat, you can reach out to me through the contact form on this page, or by
@@ -89,11 +89,7 @@
 
         </div>
         <div class="row">
-            <iframe
-                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d119981.26817592037!2d73.72107989517468!3d19.991105338393474!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3bddd290b09914b3%3A0xcb07845d9d28215c!2sNashik%2C%20Maharashtra%2C%20India!5e0!3m2!1sen!2sus!4v1759860798312!5m2!1sen!2sus"
-                width="100%" height="450" style="border:0; filter: invert(100);" allowfullscreen="" loading="lazy"
-                referrerpolicy="no-referrer-when-downgrade">
-            </iframe>
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d46938.87691017253!2d-73.85188043424128!3d42.668140229908936!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89de0a34cc4ffb4b%3A0xe1a16312a0e728c4!2sAlbany%2C%20NY!5e0!3m2!1sen!2sus!4v1760047821684!5m2!1sen!2sus" style="border:0; filter: invert(100);" width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
         </div>
     </div>
     <!-- Contact us end -->
