--- a/contact.html
+++ b/contact.html
@@ -4,181 +4,153 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description"
+        content="Let's connect! Reach out to Vaishnavi Bachhav for collaborations, questions, or feedback." />
+    <title>Contact | Vaishnavi Bachhav</title>
+
     <link rel="icon" type="image/x-icon" href="assets//images/favicon.ico">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Sacramento&display=swap" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
         xintegrity="sha512-SnH5WK+bZxgPHs44uWIX+LLMDJ8qU3O2Ue4r3aB5j6Qd5A2jL0P/f5/r5M9Gv4K9Q==" crossorigin="anonymous"
         referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="assets/styles/common_style.css">
-    <title>Vaishnavi Bachhav</title>
 </head>
 
 <body>
-    <header class="main-header">
+    <header class="main-header" role="banner">
         <div class="container">
-            <nav class="navbar navbar-expand-lg main-nav px-0 align-items-center">
-                <!-- Logo -->
-                <a class="navbar-brand d-flex align-items-center" href="/mojo">
-                    <img src="assets/images/Transparent-brand.png" alt="vaishnavi-bachhav.github.io">
-                </a>
+            <nav class="navbar navbar-expand-lg main-nav px-0 align-items-center" role="navigation"
+                aria-label="Main Navigation">
+                <span class="navbar-brand d-flex align-items-center" href="index.html">
+                    <img src="assets/images/Transparent-brand.png" alt="Vaishnavi Bachhav logo" height="50"
+                        loading="lazy" />
+                </span>
 
-                <!-- Toggle Button -->
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#mainMenu"
                     aria-controls="mainMenu" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="icon-bar icon-bar-1"></span>
-                    <span class="icon-bar icon-bar-2"></span>
-                    <span class="icon-bar icon-bar-3"></span>
+                    <span class="navbar-toggler-icon"></span>
                 </button>
 
-                <!-- Navbar Menu -->
                 <div class="collapse navbar-collapse justify-content-end" id="mainMenu">
                     <ul class="navbar-nav text-uppercase f1">
-                        <li class="nav-item"><a class="nav-link" href="index.html">home</a></li>
-                        <li class="nav-item"><a class="nav-link" href="aboutme.html">about me</a></li>
-                        <li class="nav-item"><a class="nav-link" href="blog.html">blog</a></li>
-                        <li class="nav-item"><a class="nav-link" href="projects.html">projects</a></li>
-                        <li class="nav-item"><a class="nav-link active" href="contact.html">contact</a></li>
+                        <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
+                        <li class="nav-item"><a class="nav-link" href="aboutme.html">About Me</a></li>
+                        <li class="nav-item"><a class="nav-link" href="blog.html">Blog</a></li>
+                        <li class="nav-item"><a class="nav-link" href="projects.html">Projects</a></li>
+                        <li class="nav-item"><a class="nav-link active" href="contact.html" aria-current="page">Contact</a></li>
                     </ul>
                 </div>
             </nav>
         </div>
     </header>
+
     <!-- Contact us start -->
-    <div class="container mt-5 pt-5">
-        <div class="row align-items-center">
-            <div class="col-lg-6 order-lg-1 order-2">
-                <h1 class="fw-bold mb-4 custom-h1">Let's Connect</h1>
-                <p class="mb-5 custom-intro-text">
-                    Let’s connect! I’m here to help and would love to hear from you. Whether you have a question, a
-                    comment, or just want to chat, you can reach out to me through the contact form on this page, or by
-                    email.
-                </p>
+    <main id="main-content" class="container mt-5" role="main">
+        <section aria-labelledby="contact-heading">
+            <div class="row align-items-center">
+                <div class="col-lg-6 order-lg-1 order-2">
+                    <h1 id="contact-heading" class="fw-bold mb-4 custom-h1">Let's Connect</h1>
+                    <p class="mb-5 custom-intro-text">
+                        I’d love to hear from you! Whether you have a question, a comment, or just want to say hi, feel
+                        free to reach out using the form below or email me directly.
+                    </p>
 
-                <form>
-                    <div class="mb-4 form-group">
-                        <label for="name" class="form-label custom-label">NAME</label>
-                        <input type="text" class="form-control custom-input" id="name" aria-describedby="nameHelp"
-                            placeholder="Enter your name">
-                    </div>
-                    <div class="mb-4 form-group">
-                        <label for="email" class="form-label custom-label">E-MAIL</label>
-                        <input type="email" class="form-control custom-input" id="email" placeholder="Enter your email">
-                    </div>
-                    <div class="mb-4 form-group">
-                        <label for="text" class="form-label custom-label">Message</label>
-                        <textarea class="form-control custom-input custom-textarea" id="text" rows="6"
-                            placeholder="Enter your messge"></textarea>
-                    </div>
-                    <button class="btn custom-btn-email w-100 mb-5 py-3">
-                        SEND
-                    </button>
-                </form>
-            </div>
+                    <form aria-label="Contact Form">
+                        <div class="mb-4 form-group">
+                            <label for="name" class="form-label custom-label">Name </label>
+                            <input type="text" class="form-control custom-input" id="name" name="name"
+                                placeholder="Enter your name" aria-required="true" required />
+                        </div>
 
-            <div class="col-lg-6 text-center order-lg-2 order-1 mb-5 mb-lg-0">
-                <div class="illustration-placeholder">
-                    <img src="assets/images/contact-bg.png" alt="Person working on a laptop"
-                        class="img-fluid custom-illustration">
+                        <div class="mb-4 form-group">
+                            <label for="email" class="form-label custom-label">E-mail  </label>
+                            <input type="email" class="form-control custom-input" id="email" name="email"
+                                placeholder="Enter your email" aria-required="true" required />
+                        </div>
+
+                        <div class="mb-4 form-group">
+                            <label for="message" class="form-label custom-label">Message</label>
+                            <textarea class="form-control custom-input custom-textarea" id="message" name="message"
+                                rows="6" placeholder="Enter your message"></textarea>
+                        </div>
+
+                        <button type="submit" class="btn custom-btn-email w-100 mb-2 py-3" aria-label="Send message">
+                            Send
+                        </button>
+                    </form>
+                </div>
+
+                <div class="col-lg-6 text-center order-lg-2 order-1 mb-5 mb-lg-0">
+                    <figure class="illustration-placeholder">
+                        <img src="assets/images/contact-bg.png" alt="Illustration of person working on a laptop"
+                            class="img-fluid custom-illustration" loading="lazy" />
+                    </figure>
                 </div>
             </div>
+        </section>
 
-        </div>
-        <div class="row">
-            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d46938.87691017253!2d-73.85188043424128!3d42.668140229908936!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89de0a34cc4ffb4b%3A0xe1a16312a0e728c4!2sAlbany%2C%20NY!5e0!3m2!1sen!2sus!4v1760047821684!5m2!1sen!2sus" style="border:0; filter: invert(100);" width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-        </div>
-    </div>
+        <section class="my-4">
+            <!-- <h2 id="map-heading" class="visually-hidden">Location Map</h2> -->
+            <iframe title="Map showing Albany, NY"
+                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d46938.87691017253!2d-73.85188043424128!3d42.668140229908936!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89de0a34cc4ffb4b%3A0xe1a16312a0e728c4!2sAlbany%2C%20NY!5e0!3m2!1sen!2sus!4v1760047821684!5m2!1sen!2sus"
+                width="100%" height="450" style="border:0; filter: invert(100%);" allowfullscreen loading="lazy"
+                referrerpolicy="no-referrer-when-downgrade">
+            </iframe>
+        </section>
+    </main>
     <!-- Contact us end -->
+
     <!-- Footer start -->
-    <footer class="text-center text-white " style="background-color: #1C1C1C">
+    <footer class="text-center text-white" style="background-color:#1C1C1C" role="contentinfo">
         <div class="container">
-            <!-- Section: Links -->
-            <section class="mt-5">
-                <div class="row text-center d-flex justify-content-center pt-5">
-                    <div class="col-md-2">
-                        <h6 class="text-uppercase font-weight-bold">
-                            <a href="aboutme.html" class="text-white">About me</a>
-                        </h6>
-                    </div>
-
-                    <div class="col-md-2">
-                        <h6 class="text-uppercase font-weight-bold">
-                            <a href="blog.html" class="text-white">blogs</a>
-                        </h6>
-                    </div>
-
-                    <div class="col-md-2">
-                        <h6 class="text-uppercase font-weight-bold">
-                            <a href="projects.html" class="text-white">Projects</a>
-                        </h6>
-                    </div>
-
-                    <div class="col-md-2">
-                        <h6 class="text-uppercase font-weight-bold">
-                            <a href="contact.html" class="text-white">Contact</a>
-                        </h6>
-                    </div>
-                </div>
-            </section>
-            <!-- Section: Links -->
+            <nav aria-label="Footer Navigation">
+                <ul class="row text-center d-flex justify-content-center pt-5 list-unstyled">
+                    <li class="col-md-2"><a href="aboutme.html" class="text-white">About Me</a></li>
+                    <li class="col-md-2"><a href="blog.html" class="text-white">Blogs</a></li>
+                    <li class="col-md-2"><a href="projects.html" class="text-white">Projects</a></li>
+                    <li class="col-md-2"><a href="contact.html" class="text-white">Contact</a></li>
+                </ul>
+            </nav>
 
             <hr class="my-5" />
 
-            <!-- Section: Text -->
-            <section class="mb-5">
-                <div class="row d-flex justify-content-center">
-                    <div class="col-lg-8">
-                        <p>
-                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt
-                            distinctio earum repellat quaerat voluptatibus placeat nam,
-                            commodi optio pariatur est quia magnam eum harum corrupti
-                            dicta, aliquam sequi voluptate quas.
-                        </p>
-                    </div>
-                </div>
+            <section class="mb-5" aria-label="Footer Description">
+                <p class="mx-auto" style="max-width:700px">
+                    Passionate about technology and problem-solving. Let's connect and collaborate to build something
+                    impactful.
+                </p>
             </section>
-            <!-- Section: Text -->
 
-            <!-- Section: Social -->
-            <section class="text-center mb-5">
-                <a href="mailto:vaishnavi.bachhav111@gmail.com" class="text-white me-4">
+            <div class="text-center mb-5 social-links" aria-label="Social Links">
+                <a href="mailto:vaishnavi.bachhav111@gmail.com" class="text-white me-4"
+                    aria-label="Email Vaishnavi Bachhav">
                     <i class="fa-solid fa-envelope"></i>
                 </a>
-                <a href="tel:+918329448844" class="text-white me-4">
+                <a href="tel:+918329448844" class="text-white me-4" aria-label="Call Vaishnavi Bachhav">
                     <i class="fa-solid fa-phone"></i>
                 </a>
-                <a href="https://www.linkedin.com/in/vaishnavi-bachhav" class="text-white me-4">
+                <a href="https://www.linkedin.com/in/vaishnavi-bachhav" class="text-white me-4"
+                    aria-label="LinkedIn Profile">
                     <i class="fa-brands fa-linkedin"></i>
                 </a>
-                <a href="https://github.com/vaishnavi-bachhav" class="text-white me-4">
+                <a href="https://github.com/vaishnavi-bachhav" class="text-white me-4" aria-label="GitHub Profile">
                     <i class="fa-brands fa-github"></i>
                 </a>
-            </section>
-            <!-- Section: Social -->
+            </div>
         </div>
-
-        <!-- Copyright -->
         <div class="text-center p-3 copyright">
-            © 2025 Copyright by Vaishnavi Bachhav
-        </div>
-        <!-- Copyright -->
+                © 2025 Copyright by Vaishnavi Bachhav
+            </div>
     </footer>
     <!-- Footer end-->
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI"
         crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
-        integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
-        crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.min.js"
-        integrity="sha384-G/EV+4j2dNv+tEPo3++6LCgdCROaejBqfUeNjuKAiuXbjrxilcCdDz6ZAVfHWe1Y"
-        crossorigin="anonymous"></script>
-    <script src="https://unpkg.com/github-calendar@latest/dist/github-calendar.min.js"></script>
 </body>
 
 </html>
