--- a/index.html
+++ b/index.html
@@ -18,6 +18,61 @@
         xintegrity="sha512-SnH5WK+bZxgPHs44uWIX+LLMDJ8qU3O2Ue4r3aB5j6Qd5A2jL0P/f5/r5M9Gv4K9Q==" crossorigin="anonymous"
         referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="assets/styles/common_style.css">
+    <style>
+        .icon-bootstrap {
+            background-color: #7952B3;
+            color: white;
+            font-size: 1.2rem;
+        }
+
+        .icon-react {
+            background-color: #61DAFB;
+            color: #000;
+            font-size: 1.2rem;
+        }
+
+        .icon-xml {
+            background-color: #FF6600;
+            color: white;
+            font-size: 0.8rem;
+        }
+
+        .icon-ajax {
+            background-color: #3B5998;
+            color: white;
+            font-size: 0.8rem;
+        }
+
+        .icon-dapper {
+            background-color: #CC2936;
+            color: white;
+            font-size: 0.8rem;
+        }
+
+        .icon-azure {
+            background-color: #0078D4;
+            color: white;
+            font-size: 0.8rem;
+        }
+
+        .icon-iis {
+            background-color: #000;
+            color: #0078D4;
+            font-size: 0.8rem;
+        }
+
+        .icon-jenkins {
+            background-color: #D24939;
+            color: white;
+            font-size: 1.2rem;
+        }
+
+        .icon-git {
+            background-color: #F05032;
+            color: white;
+            font-size: 0.8rem;
+        }
+    </style>
 </head>
 
 <body>
@@ -174,7 +229,7 @@
         <!-- Recommendations end -->
 
         <!-- Tech stacks start -->
-        <section class="container py-5 tech-stacks">
+        <section class="container py-5 tech-stacks shadow-drop-2-top">
 
             <h2 class="text-center">Tech Skills</h1>
                 <p class="section-desc text-center mb-5">
